2010-01-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix potential integer overflow vulnerabilities.
	Thanks Tim Starling <tstarling@wikimedia.org> for pointing out.

	* src/thbrk/thbrk.c (th_brk_line): Return zero if malloc size overflows
	or malloc fails.
	* src/thbrk/brk-maximal.c (best_brk_new): Return NULL if malloc size
	overflows.

2009-08-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.

	* data/tdict-std-compound.txt: Remove loose compounds.
	* data/tdict-{ict,district,proper,common,science,lang-ethnic,geo}.txt:
	Add words.

2009-06-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Bump library revision.

	* configure.in, NEWS:
	=== Version 0.1.12 ===

2009-06-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std-compound.txt: Remove loose compounds.

2009-06-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std-compound.txt: Remove loose compounds.
	* data/tdict-{ict,district,proper,common,science,geo}.txt: Add words.

2009-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl, best_brk_contest): 
	Back out weighted scoring for solution contest, as it sometimes tries
	too hard to minimize word count, even though another solution with more
	known words can match more text and results in smaller unknown zone.
	Accidental words problem, which this scheme tried to address, has
	already been alleviated with increased recovery threshold.

2009-06-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/brk-maximal.c (brk_maximal_do_impl): Add break pos at
	string end and let it enter the contest, instead of backing it out by
	moving back str_pos as done in previous commit. That commit just
	missed the point. Doing the right thing also guarantees consistency
	with the case when some text of valid words is appended to the string.
