@@ -1,13 +1,13 @@
-/* Thai Word Break Library
- * based on cttex by Vuthichai A. (vuthi@[crtl.titech.ac.jp|linux.thai.net])
-
+/* -*- Mode: C; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- */
+/*
+ * thwbrk.c - Thai word break routine, wide char version
  * Created 2001-07-15
- * $Id: thwbrk.c,v 1.5 2001-08-04 15:26:49 ott Exp $
+ * Author:  Theppitak Karoonboonyanan <thep@linux.thai.net>
  */
 
 #include <stdio.h>
 #include <string.h>
-#include <memory.h>
+#include <stdint.h>
 #include <stdlib.h>
 
 #include <thai/thailib.h>
@@ -15,100 +15,63 @@
 #include <thai/thbrk.h>
 
 
-int th_wbrk(const thwchar_t *s, int pos[], size_t n) {
-  thchar_t* tis620_0_string;
-  unsigned int inputLength, inputLengthReturned;
-  int returnValue;
+int th_wbrk (const thwchar_t *s, int pos[], size_t n)
+{
+    thchar_t*   tis_str;
+    size_t      alloc_size;
+    int         ret;
 
-  inputLength = wcslen(s);
-
-  /* convert to tis620-0 string */
-  tis620_0_string = malloc(inputLength+1);
-  inputLengthReturned = th_uni2tis_line(s, tis620_0_string, inputLength+1);
-  if ( inputLength != inputLengthReturned) {
-    free(tis620_0_string);
-    tis620_0_string = malloc(inputLengthReturned+1);
-    th_uni2tis_line(s, tis620_0_string, inputLengthReturned+1);
-  };
+    /* convert to tis-620 string */
+    alloc_size = wcslen(s) + 1;
+    tis_str = malloc(alloc_size);
+    if (!tis_str)
+        return 0;
+    th_uni2tis_line(s, tis_str, alloc_size);
   
-  /* Do word cut */
-  returnValue = th_brk(tis620_0_string, pos, n);
+    /* do word break */
+    ret = th_brk(tis_str, pos, n);
 
-  /* Deallocate memory */
-  free(tis620_0_string);
+    free(tis_str);
 
-  return returnValue;
+    return ret;
 }
 
-int th_wbrk_line(const thwchar_t *in, thwchar_t *_out, size_t n, const thwchar_t* _cutCode ) {
+int th_wbrk_line(const thwchar_t *in, thwchar_t *out, size_t n,
+                 const thwchar_t* delim )
+{
+    int        *brk_pos;
+    size_t      n_brk_pos, i, j;
+    int         delim_len;
+    thwchar_t  *p_out;
 
-  thchar_t *tis620_0_string, *tis620_0_out;
-  thwchar_t *uni_out, *preout;
+    n_brk_pos = wcslen (in);
+    if (n_brk_pos > SIZE_MAX / sizeof (int))
+        return 0;
+    brk_pos = (int *) malloc (n_brk_pos * sizeof (int));
+    if (!brk_pos)
+        return 0;
 
-  unsigned int inputLength, inputLengthReturned, cutCodeLength;
-  unsigned int tis620_0_outLength, preoutLength, minValue;
-  int i, returnValue;
-  char* cutCode = "\xFE";
-
-  inputLength = wcslen(in);
-
-  /* convert to tis620-0 string */
-  tis620_0_string = malloc(inputLength+1);
-  inputLengthReturned = th_uni2tis_line(in, tis620_0_string, inputLength+1);
-  if ( inputLength != inputLengthReturned) {
-    free(tis620_0_string);
-    tis620_0_string = malloc(inputLengthReturned+1);
-    th_uni2tis_line(in, tis620_0_string, inputLengthReturned+1);
-  };
-  
-  /* malloc for tis620-0output cut string */
-  tis620_0_outLength =  2 * strlen( (char*) tis620_0_string);
-  tis620_0_out = malloc( tis620_0_outLength+1);
-  
-  /* Do word cut */
-  tis620_0_outLength = th_brk_line(tis620_0_string, tis620_0_out, tis620_0_outLength+1, cutCode);
-  
-  /* Create equivalent unicode output */
-  uni_out = (thwchar_t *) malloc((tis620_0_outLength+1)*sizeof(thwchar_t));
-  th_tis2uni_line( tis620_0_out, uni_out, tis620_0_outLength+1);
-  
-  /* check the length of cutCode */
-  cutCodeLength = wcslen(_cutCode);
-
-  /* malloc the pre output unicode string */
-  preoutLength = tis620_0_outLength * cutCodeLength;
-  preout = (thwchar_t *) malloc( (preoutLength+1)* sizeof(thwchar_t));
-  *preout = '\0';
-
-  /* create the real output */
-  for ( i = 0 ; i < tis620_0_outLength; i++) {
-    if ( strchr(cutCode, tis620_0_out[i]) != NULL ) { /* ok now we found the cut point */
-    /*if ( cutCode[0] == tis620_0_out[i] ) { // ok now we found the cut point */
-      /* change to user supplied cutcode */
-      wcscat( preout, _cutCode);
-    } else {
-      /* copy to output */
-      wcsncat( preout, uni_out + i, 1 );
+    n_brk_pos = th_wbrk (in, brk_pos, n_brk_pos);
+    
+    delim_len = wcslen (delim);
+    for (i = j = 0, p_out = out; n > 1 && i < n_brk_pos; i++) {
+        while (n > 1 && j < brk_pos[i]) {
+            *p_out++ = in [j++];
+            --n;
+        }
+        if (n > delim_len + 1) {
+            wcscpy (p_out, delim);
+            p_out += delim_len;
+            n -= delim_len;
+        }
     }
-  };
+    while (n > 1 && in [j]) {
+        *p_out++ = in [j++];
+        --n;
+    }
+    *p_out = 0;
 
-  /* get the real output length */
-  returnValue = wcslen(preout);
+    free (brk_pos);
 
-  /* now copy to the real _out that will be returned to caller */
-  if ( returnValue < n ) {
-    minValue = returnValue;
-  } else {
-    minValue = n;
-  };
-
-  wcsncpy(_out, preout, minValue);
-
-  /* Deallocate memory */
-  free(uni_out);
-  free(preout);
-  free(tis620_0_out);
-  free(tis620_0_string);
-
-  return returnValue;
+    return p_out - out;
 }
